assets/style.css
@import url('https://fonts.googleapis.com/css?family=Lato|Oswald&display=swap');

/* common title for all pages */

h1  {
        font-family: Oswald;
        text-transform: uppercase;
        letter-spacing: 4px;
        color: white;
        font:200%;
    }

#logo { 

    font: 200%;
    padding-left:120px;
    translate: 0px 75px;
   
}

#logo , #menu1, #menu2 {
        line-height:75px;
        color:white;
}

#menu1 , #menu2 {
    font-size: 150%;
    list-style-type: none;
    letter-spacing: 4px;
    font-family: Lato;
}

#menu1 li a {
        float: left;
        margin-right: 75px;
        color:white;
        }


#menu2 li a {
        float: right;
        margin-left: 75px;
        color:white;
        }

#menu1, #menu2 {
        text-decoration: none;
        
}

#menu1 a:hover , #menu2 a:hover {
   border-bottom: 1px solid #777777;
}

.active {
    border-bottom: 1px solid #777777;
}

.theme {
    background-color:black;
    color:white;
}

/* image used on index page main section */
#hero-image {
    height:600px;
    width:100%;
    background: url("https://images.pexels.com/photos/2261477/pexels-photo-2261477.jpeg?cs=srgb&dl=active-athlete-barbell-2261477.jpg&fm=jpg")  no-repeat center center;
    object-fit:  scale-down;
    object-position: top;
    background-size: cover;
    animation-name: hero-zoom;
    animation-duration:3s;
    animation-fill-mode:forwards;
}

#hero-outer {
 height:600px;
 width: 100%;
 overflow:hidden;
 position:relative;
}

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

/* text styling for founder quote */
#cover-text, #cover-text h2 {
    color: white;
    font-size: 10px;
    text-transform: uppercase;
    text-shadow: Oswald 0px 0px 1px,   Oswald 0px 0px 1px,   Oswald 0px 0px 1px,
             Oswald 0px 0px 1px,   Oswald 0px 0px 1px,   Oswald 0px 0px 1px;
}

#cover-text {
    font-size: 20px;
    font-family: Oswald;
    text-transform: uppercase;
    letter-spacing: 5px;
    width:300px;
    height:200px;
    padding-left: 20px;
    padding-top: 0px;
    bottom:100px;
    right:120px;
    color:white;
    position:absolute;
}


/* club ethos */ 
#club-ethos {
         height:300px;
}


/* used for Mission statement text */
#left-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;
}

#right-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;
}

#center-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;

}

hr {
    border-bottom: 1px solid #777777;
    width:80%;
    margin: 5px .5;
    }

#mission {
    text-align: center;
    margin:20px 0;
    text-size-adjust: 200%;
}

#hl {
    border: 1px solid silver;
    width: 100%;
    margin: auto;
    margin-top: 5%;
    margin-bottom: 5%;
    background-color: silver;
    }


/* bottom footer common to all pages */
footer {
height:300px;
background: url("https://images.pexels.com/photos/3153201/pexels-photo-3153201.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center center;
background-size: cover;  
margin:0;   
}

.social-media li {
    list-style-type: none;
    text-align: center;
}

.social-media p {
    color: black;
    clear:both;
    float: right;
    text-align: center;
    margin:1%;
    
    background-color: white;
}

.social-media li a {
    font-size: 100%;
    margin: 1%;
    text-align: center;
    float: right;
    color:black;
    background-color:white;
    clear:both;
    list-style-type: none;
}

/* google maps iframe input on contact page */
#gmap iframe {
    height:225px;
    width:100%;
    margin: 0;
    clear:both;
}

.photo {
    clear:both;
    line-height: 0;
}

/* main section of contact us page w/ three photo layout */
.left-about-contact {
    height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/1552104/pexels-photo-1552104.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500") center no-repeat no-repeat;
    background-size: cover; 
}

.right-about-contact {
    height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/1886487/pexels-photo-1886487.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500") center no-repeat no-repeat;
    background-size: cover;         
}

.center-about-contact {
    
    height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/669584/pexels-photo-669584.jpeg?auto=compress&cs=tinysrgb&h=650&w=940") center no-repeat no-repeat;
    background-size: cover; 
    
}

/* testing at bottom of contact page to debug formatting */
.test {
    height: 300px;
    clear:both;
    
}

.test li {
    list-style-type: none;
    text-align:center;

    display: inline-block;
}

.test li a {
    color:black;
}

